outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-26_10-32-20/evaluations/problem_eval844626037501976778_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance midway, and coherence stabilizes the path late, with weights adjusted based on progress, entropy, and momentum to dynamically balance exploration and exploitation while introducing novel mechanisms like neighborhood entropy and directional bias reinforcement.}
                                                                                                                                                                                                                                                                                  ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance midway, and coherence stabilizes the path late, with weights adjusted based on progress, entropy, and momentum to dynamically balance exploration and exploitation while introducing novel mechanisms like neighborhood entropy and directional bias reinforcement.}
                                                                                                                                                                                                                                                                                  ^
SyntaxError: unmatched '}'
